[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rediskit"
version = "0.0.40"
description = "A comprehensive Redis toolkit for Python with caching, memoization, and utilities"
readme = "README.md"
authors = [
    { name = "Badr Elfarri", email = "badr.elfarri@gmail.com" }
]
maintainers = [
    { name = "Badr Elfarri", email = "badr.elfarri@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["redis", "cache", "memoization", "toolkit", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pynacl", # Modern cryptographic library, used for Encryption
    "redis", # Redis client for caching, messaging, or storage
    "python-redis-lock", # Distributed locking mechanism using Redis
    "zstd", # Compression and decompression using Zstandard
    "httpx", # Default retry exceptions in retry_decorator target httpx errors
    "python-dotenv", # Load environment variables from a .env file
]

[dependency-groups]
dev = [
    "ruff",               # Fast Python linter and formatter
    "pytest",             # Testing framework
    "mypy",               # Static type checker for Python
    "pytest-asyncio",     # Pytest plugin for testing async code
    "types-zstd",         # Type stubs for the zstd package
    "polars"              # High-performance DataFrame library for analytics
]
docker = [
    "dockerbuildsystem>=1.1.64",
]

[project.urls]
Homepage = "https://github.com/badrelfarri/rediskit"
Documentation = "https://github.com/badrelfarri/rediskit#readme"
Repository = "https://github.com/badrelfarri/rediskit"
"Bug Tracker" = "https://github.com/badrelfarri/rediskit/issues"
Changelog = "https://github.com/badrelfarri/rediskit/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
rediskit = ["py.typed"]

[tool.ruff]
line-length = 160
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
exclude = "build/"
ignore_missing_imports = true
plugins = []